# phylactery

./: CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  PROGRESS.md  README.md  install.sh  plan.md
.github/workflows/: ci.yml
crates/phyl/: Cargo.toml
crates/phyl-bridge-signal/: Cargo.toml
crates/phyl-bridge-signal/src/: main.rs
crates/phyl-core/: Cargo.toml
crates/phyl-core/src/: lib.rs
crates/phyl-listen/: Cargo.toml
crates/phyl-listen/src/: daemon_client.rs  file_watch.rs  main.rs  rate_limit.rs  sse_listener.rs  webhook.rs
crates/phyl-model-anthropic/: Cargo.toml
crates/phyl-model-anthropic/src/: main.rs
crates/phyl-model-claude/: Cargo.toml  README.md
crates/phyl-model-claude/src/: main.rs
crates/phyl-model-openai/: Cargo.toml
crates/phyl-model-openai/src/: main.rs
crates/phyl-poll/: Cargo.toml
crates/phyl-poll/src/: main.rs
crates/phyl-psyche-sub/: Cargo.toml
crates/phyl-psyche-sub/src/: main.rs
crates/phyl-run/: Cargo.toml
crates/phyl-run/src/: main.rs
crates/phyl-sched/: Cargo.toml
crates/phyl-sched/src/: main.rs
crates/phyl-tool-bash/: Cargo.toml
crates/phyl-tool-bash/src/: main.rs
crates/phyl-tool-files/: Cargo.toml
crates/phyl-tool-files/src/: main.rs
crates/phyl-tool-mcp/: Cargo.toml
crates/phyl-tool-mcp/src/: main.rs
crates/phyl-tool-psyche/: Cargo.toml
crates/phyl-tool-psyche/src/: db.rs  main.rs  schema.sql
crates/phyl-tool-self/: Cargo.toml
crates/phyl-tool-self/src/: main.rs
crates/phyl-tool-session/: Cargo.toml
crates/phyl-tool-session/src/: main.rs
crates/phyl-tool-web/: Cargo.toml
crates/phyl-tool-web/src/: main.rs
crates/phyl-tui/: Cargo.toml
crates/phyl-tui/src/: app.rs  client.rs  events.rs  main.rs  ui.rs
crates/phyl/src/: client.rs  cmd_config.rs  cmd_log.rs  cmd_ls.rs  cmd_say.rs  cmd_session.rs  cmd_setup.rs  cmd_start.rs  cmd_status.rs  cmd_stop.rs  cmd_watch.rs  format.rs  init.rs  main.rs
crates/phylactd/: Cargo.toml
crates/phylactd/src/: main.rs
docs/: README.md  architecture.md  configuration.md  identity-files.md  knowledge-base.md  phyl-bridge-signal.md  phyl-core.md  phyl-listen.md  phyl-model-anthropic.md  phyl-model-claude.md  phyl-model-openai.md  phyl-poll.md  phyl-run.md  phyl-sched.md  phyl-tool-bash.md  phyl-tool-files.md  phyl-tool-mcp.md  phyl-tool-self.md  phyl-tool-session.md  phyl.md  phylactd.md  plan-psyche-system.md  protocols.md  sessions.md
