[workspace]
resolver = "2"
members = [
    "crates/phyl-core",
    "crates/phylactd",
    "crates/phyl",
    "crates/phyl-run",
    "crates/phyl-model-claude",
    "crates/phyl-tool-bash",
    "crates/phyl-tool-files",
    "crates/phyl-tool-session",
    "crates/phyl-tool-mcp",
    "crates/phyl-bridge-signal",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
libc = "0.2"
