[workspace]
resolver = "2"
members = [
    "crates/phyl-core",
    "crates/phylactd",
    "crates/phyl",
    "crates/phyl-run",
    "crates/phyl-model-claude",
    "crates/phyl-tool-bash",
    "crates/phyl-tool-files",
    "crates/phyl-tool-session",
    "crates/phyl-tool-mcp",
    "crates/phyl-bridge-signal",
    "crates/phyl-poll",
    "crates/phyl-listen",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tower = "0.5"
