[package]
name = "phyl-bridge-signal"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
phyl-core = { path = "../phyl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
