[package]
name = "phyl-listen"
version = "0.1.0"
edition = "2024"

[dependencies]
phyl-core = { path = "../phyl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
libc = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
inotify = "0.11"
glob = "0.3"
