[package]
name = "phyl-tui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
phyl-core = { path = "../phyl-core" }
ratatui = "0.30"
crossterm = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
