[package]
name = "phyl"
version = "0.1.0"
edition = "2024"

[dependencies]
phyl-core = { path = "../phyl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
