[package]
name = "phylactd"
version = "0.1.0"
edition = "2024"

[dependencies]
phyl-core = { path = "../phyl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"
